set movement value for pointer event while locked

This CL changes Node::CreateAndDispatchPointerEvent to use
SetCoordinatesFromWebPointerProperties to set DOM PE coordinates
correctly.

Bug: 836995
Change-Id: I157a312b37f70f0804edeee39d4c48796bb92ea2
Reviewed-on: https://chromium-review.googlesource.com/1040361
Reviewed-by: David Bokan <bokan@chromium.org>
Reviewed-by: Navid Zolghadr <nzolghadr@chromium.org>
Commit-Queue: Ella Ge <eirage@chromium.org>
Cr-Commit-Position: refs/heads/master@{#559666}
Former-commit-id: 0740ece4aad8c20ea91a9f13207c43af40c043eb